# receipt-expense-tracker-cv

./: .gitignore  03_Train_YOLO_Detection.ipynb  COMPLETE_PHASE1_SETUP.md  README.md  pyproject.toml  setup.md
archieve/notebooks copy/: 00_extract_data.ipynb  01_eda copy.ipynb  01_eda.ipynb  01_preprocess.ipynb  02_B_trocr_ocr.ipynb  02_ocr.ipynb  02_ocr_gpu.ipynb  03A_validator_sroie.ipynb  03_extract_fields.ipynb
docs/: EDA.md
notebooks/: 00_EDA.ipynb  01_Preprocess.ipynb  02_PrepareYOLO.ipynb  03_Train_YOLO_Detection.ipynb  04_OCR_Text_Extraction.ipynb  05_OCR_Tesseract.ipynb  06_Field_Extraction_Regex.ipynb  07_Evaluation_OCR_Metrics.ipynb  08_Evaluate_YOLO_Model.ipynb  09_Inference.ipynb
noteooks/: 06_evaluation_metrics.ipynb
src/: extract_fields.py  ocr_engine.py  preprocess copy 2.py  preprocess copy.py  preprocess.py
